<resources>
    <string name="app_name">CERTIFY Snap</string>
    <string name="active_failed">License activation failed,Please contact Certify.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="registering_please_wait">registering,please wait</string>
    <string name="login_password">Password:</string>
    <string name="permission_denied">permission denied!</string>
    <string name="recognize_failed_notice">DENIED:%s</string>
    <string name="recognize_success_notice">PASS:%s</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="living_type_0">No</string>
    <string name="living_type_1">Yes</string>
    <string name="txt_data_management_title">Data Management</string>
    <string name="led_switch">LED Switch: </string>
    <string name="NavigationBar">Show Navigation Bar: </string>
    <string name="relayinfo">Please input a time!</string>
    <string name="toast_guide_permission">Please give permission manually!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="Unrecognized">Unrecognized</string>
    <string name="toast_rgbir_pwderror">Password not correct!</string>
    <string name="text_notpasstime">Non-passage time,Please contact the administrator!</string>
    <string name="text_nopermission">No Permission,Please contact the administrator!</string>
    <string name="text_expiredtime">It is beyond the date of expiry,Please contact the administrator!</string>
    <string name="text_passcodeexpired">Passcode has expired</string>
    <string name="fahrenheit_symbol">&#160;°F</string>
    <string name="centi">&#160;°C</string>
    <string name="temperature_normal">Temperature Normal:&#160;</string>
    <string name="temperature_anormaly">Temperature High:&#160;</string>
    <string name="temperature_failresult">Failed to get temperature!</string>
    <string name="ExtractCode">ExtractCode:</string>
    <string name="ProcessCode">ProcessCode:</string>
    <string name="VISITOR">VISITOR </string>
    <string name="toast_manage_member_exist">Member Id already exists!</string>
    <string name="toast_manage_access_exist">Access Id already exists!</string>
    <string name="SetDate">Set Date</string>
    <string name="SetTime">Set Time</string>
    <string name="delete">Delete</string>
    <string name="delete_wait">Delete! Please wait...</string>
    <string name="Register">Register</string>
    <string name="register_wait">Register! Please wait...</string>
    <string name="Register_success">Register Success!</string>
    <string name="register_failed">Register failed! Please try again!</string>
    <string name="update_failed">Update failed! Please try again!</string>
    <string name="deletion_failed">Due to some network problem. Data can not be deleted online.</string>
    <string name="Update_success">Update Success!</string>
    <string name="Delete_success">Delete Success!</string>
    <string name="Delete_failed">Register failed! Please try again!</string>
    <string name="camera_temp">Temperature</string>
    <string name="camera_face">Temperature and Face</string>
    <string name="thermal_scan">THERMAL SCAN</string>
    <string name="SetTemp">Temperature Settings</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="access_password">Access Password</string>
    <string name="device_activation_status">Online Activation Status</string>
    <string name="not_activated"><u>Not Activated</u></string>
    <string name="activate"><u>Activate</u></string>
    <string name="endpoint">Endpoint Name</string>
    <string name="app_version">Version</string>
    <string name="tv_thermal_setting">Home View Settings</string>
    <string name="welcome_thermal">Home Screen Text</string>
    <string name="enter_title">Enter Large Text </string>
    <string name="enter_subtitle">Enter Small Text </string>
    <string name="display_temperature">Display Temperature Details to the User on Screen</string>
    <string name="tv_scan_setting">Scan View Settings</string>
    <string name="capture_images">Capture images of Users with Temperature above Threshold</string>
    <string name="Capture_all">Capture images of all Users</string>
    <string name="enable_sound">Enable sound on normal temperature</string>
    <string name="enable_sound_high">Enable sound on temperature above threshold</string>
    <string name="enable_qr_sound_valid">Enable sound for valid qr code</string>
    <string name="enable_qr_sound_invalid">Enable sound for invalid qr code</string>
    <string name="enable_light">Enable light on normal temperature</string>
    <string name="enable_light_high">Enable light on temperature above threshold</string>
    <string name="enable_printer">Enable print</string>
    <string name="print_all_scan">Print for all Scan</string>
    <string name="print_access_card">Print for Access Card Users</string>
    <string name="print_qr_code_users">Print for QR Code Users</string>
    <string name="print_wave_users">Print for Wave Users</string>
    <string name="print_high_temperature">Print for High Temperature</string>
    <string name="enable_mask">Enable Mask Detection</string>
    <string name="enable_facial">Enable Facial Recognition</string>
    <string name="screen_delay">Screen display time (seconds)</string>
    <string name="tv_confirmation_setting">Confirmation View Settings</string>
    <string name="member_management_setting">Member Management</string>
    <string name="audio_visual_setting">Audio and Visual Settings </string>
    <string name="printer_setting">Printer Settings</string>
    <string name="confirmation_view">Confirmation View</string>
    <string name="enable_temperature">Enable</string>
    <string name="confirmation_text_below">Confirmation for temperature below threshold</string>
    <string name="confirmation_text_above">Confirmation for temperature above threshold</string>
    <string name="scan_view">Scan View</string>
    <string name="audio_visual_view">Audio and Visual</string>
    <string name="ble_devices_view">BLE Devices</string>
    <string name="thermal_view">Home View</string>
    <string name="enter_title_main">Enter Main Text</string>
    <string name="enter_subtitle_sub">Enter Sub Text</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Celsius</string>
    <string name="save">SAVE</string>
    <string name="temperature_threshold">Set Temperature Threshold</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_calibration">Temperature Calibration</string>
    <string name="app_serial">Serial No:&#160;</string>
    <string name="tv_guide_setting">Guide Settings</string>
    <string name="text_value1">Please center your face to the screen.</string>
    <string name="first_name">First Name</string>
    <string name="add_device">Login to register the device</string>
    <string name="not_configure">This device is not configured to work online.</string>
    <string name="cloud">If you already have a cloud account,</string>
    <string name="activation_again">Try Activation Again</string>
    <string name="skip">Skip for Now</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="setting_printer">Printer Settings</string>
    <string name="printer_title">Connect to Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="number_of_copies_title">Number of copies</string>
    <string name="number_of_copies_value">Set the number of copies </string>
    <string name="scale_value_title">Scale value</string>
    <string name="scale_value_value">Select the scale value </string>
    <string name="fit_to_page_title">Fit to page</string>
    <string name="fit_to_page_value">Select if fitting to page </string>
    <string name="print_quality_title">Print quality</string>
    <string-array name="print_quality_value">
        <item>LOW_RESOLUTION</item>
        <item>NORMAL</item>
        <item>DOUBLE_SPEED</item>
        <item>HIGH_RESOLUTION</item>
    </string-array>
    <string name="is_end_cut_title">End Cut</string>
    <string name="is_end_cut_value">do end cut or not</string>
    <string name="is_auto_cut_title">Auto Cut</string>
    <string name="is_auto_cut_value">do auto cut or not</string>
    <string name="ip_mac_title">IP/MAC Address</string>
    <string name="ip_mac_value">Set the IP/MAC Address</string>
    <string name="cut_settings_value">Set the Cut Settings</string>
    <string name="cut_settings_title">Cut Settings</string>
    <string name="half_cut_title">Half Cut(PT Only)</string>
    <string name="half_cut_value">do half cut or not</string>
    <string name="special_tape_title">Special tape paper(PT Only)</string>
    <string name="special_tape_value">is special tape paper</string>
    <string name="timeout_title">Timeout</string>
    <string name="timeout_text">Set the timeout </string>
    <string name="processTimeout_value">Time-out period</string>
    <string name="processTimeout_title">Set overall time-out time </string>
    <string name="sendTimeout_value">Set transmission waiting time</string>
    <string name="sendTimeout_title">Transmission waiting time</string>
    <string name="receiveTimeout_title">Reception waiting time</string>
    <string name="receiveTimeout_value">Set reception waiting time </string>
    <string name="connectionTimeout_title">Connect waiting time</string>
    <string name="connectionTimeout_value">Set connect waiting time </string>
    <string name="close_wait_time_value">Close Time-out period</string>
    <string name="close_wait_time_title">Set close waiting time</string>
    <string name="work_path_value">Select the work path</string>
    <string name="work_path_title">Work Folder</string>
    <string name="default_rect">Default rect : Rect(23,32-26,38)</string>
    <string name="current_rect">Current rect : Rect(23,32-26,38)</string>
    <string name="format_rect">Format : rect(left,top-right,bottom)
        \nThe actual coordinates of the thermal image:
        \nThe x axis is opposite to the y axis(top,left-bottom,right)"</string>
    <string name="rect_left">Rect left (top) :</string>
    <string name="rect_top">Rect top (left) :</string>
    <string name="rect_right">Rect right (bottom) :</string>
    <string name="rect_bottom">Rect bottom (right) :</string>
    <string name="cancel_dialog">cancel</string>
    <string name="confirm_dialog">confirm</string>
    <string name="valid">Valid</string>
    <string name="family_name">Standardised Family Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="target_disease">Target Disease</string>
    <string name="covid">Covid-19</string>
    <string name="date_of_vaccine">Date of vaccination</string>
    <string name="done">Done</string>
</resources>