<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:summary="@string/setting_printer"
        android:title="@string/setting_printer">
        <ListPreference
            android:defaultValue="QL_820NWB"
            android:key="printerModel"
            android:summary="@string/printer_model_value"
            android:title="@string/printer_model_title" />

        <ListPreference
            android:defaultValue="NET"
            android:enabled="true"
            android:key="port"
            android:summary="@string/port_value"
            android:title="@string/port_title" />

        <PreferenceScreen
            android:defaultValue="@string/printer_text"
            android:key="printer"
            android:summary="@string/printer_text"
            android:title="@string/printer_title">
        </PreferenceScreen>

        <ListPreference
            android:defaultValue="W62"
            android:key="paperSize"
            android:summary="@string/paper_size_value"
            android:title="@string/paper_size_title" />
        <ListPreference
            android:defaultValue="PORTRAIT"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values"
            android:key="orientation"
            android:summary="@string/orientation_value"
            android:title="@string/orientation_title" />

        <PreferenceScreen
            android:key="scaleModelSetting"
            android:summary="@string/fit_to_page_value"
            android:title="@string/fit_to_page_title">
            <ListPreference
                android:defaultValue="FIT_TO_PAGE"
                android:enabled="true"
                android:entries="@array/fitToPage"
                android:entryValues="@array/fit_to_page_values"
                android:key="printMode"
                android:summary="@string/fit_to_page_value"
                android:title="@string/fit_to_page_title" />

            <EditTextPreference
                android:defaultValue="1"
                android:enabled="true"
                android:key="scaleValue"
                android:summary="@string/scale_value_value"
                android:title="@string/scale_value_title" />
        </PreferenceScreen>

        <EditTextPreference
            android:defaultValue="1"
            android:enabled="true"
            android:key="numberOfCopies"
            android:maxLength="5"
            android:numeric="integer"
            android:summary="@string/number_of_copies_value"
            android:title="@string/number_of_copies_title" />
        <ListPreference
            android:entries="@array/work_path_entries"
            android:key="workPath"
            android:summary="@string/work_path_value"
            android:title="@string/work_path_title" />

        <PreferenceScreen
            android:key="timeoutSetting"
            android:summary="@string/timeout_text"
            android:title="@string/timeout_title">
            <EditTextPreference
                android:defaultValue="1"
                android:enabled="true"
                android:inputType="number"
                android:key="processTimeout"
                android:summary="@string/processTimeout_value"
                android:title="@string/processTimeout_title" />
            <EditTextPreference
                android:defaultValue="90"
                android:enabled="true"
                android:inputType="number"
                android:key="sendTimeout"
                android:summary="@string/sendTimeout_value"
                android:title="@string/sendTimeout_title" />
            <EditTextPreference
                android:defaultValue="180"
                android:enabled="true"
                android:inputType="number"
                android:key="receiveTimeout"
                android:summary="@string/receiveTimeout_value"
                android:title="@string/receiveTimeout_title" />
            <EditTextPreference
                android:defaultValue="500"
                android:enabled="true"
                android:inputType="number"
                android:key="connectionTimeout"
                android:summary="@string/connectionTimeout_value"
                android:title="@string/connectionTimeout_title" />
            <EditTextPreference
                android:defaultValue="3"
                android:enabled="true"
                android:inputType="number"
                android:key="closeWaitTime"
                android:summary="@string/close_wait_time_value"
                android:title="@string/close_wait_time_title" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceScreen
        android:key="prefIpMacAddress"
        android:summary="@string/ip_mac_value"
        android:title="@string/ip_mac_title">
        <EditTextPreference
            android:enabled="true"
            android:key="address"
            android:summary="@string/address_value"
            android:title="@string/address_title" />
        <EditTextPreference
            android:enabled="true"
            android:key="macAddress"
            android:summary="@string/mac_address_value"
            android:title="@string/mac_address_title" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="prefCutSettings"
        android:summary="@string/cut_settings_value"
        android:title="@string/cut_settings_title">
        <ListPreference
            android:defaultValue="true"
            android:enabled="true"
            android:entries="@array/yes_no_entries"
            android:entryValues="@array/yes_no_value"
            android:key="autoCut"
            android:summary="@string/is_auto_cut_value"
            android:title="@string/is_auto_cut_title" />
        <ListPreference
            android:defaultValue="false"
            android:enabled="true"
            android:entries="@array/yes_no_entries"
            android:entryValues="@array/yes_no_value"
            android:key="endCut"
            android:summary="@string/is_end_cut_value"
            android:title="@string/is_end_cut_title" />
        <ListPreference
            android:defaultValue="false"
            android:enabled="true"
            android:entries="@array/yes_no_entries"
            android:entryValues="@array/yes_no_value"
            android:key="halfCut"
            android:summary="@string/half_cut_value"
            android:title="@string/half_cut_title" />
        <ListPreference
            android:defaultValue="false"
            android:enabled="true"
            android:entries="@array/yes_no_entries"
            android:entryValues="@array/yes_no_value"
            android:key="specialType"
            android:summary="@string/special_tape_value"
            android:title="@string/special_tape_title" />
        <ListPreference
            android:defaultValue="HIGH_RESOLUTION"
            android:entries="@array/print_quality_array"
            android:entryValues="@array/print_quality_value"
            android:key="printQuality"
            android:summary="@string/print_quality_value"
            android:title="@string/print_quality_title" />
    </PreferenceScreen>

</PreferenceScreen>