<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_50"
        android:text="@string/not_configure"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/cloud"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btn_add_device"
        style="@style/buttonNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_shape"
        android:text="@string/add_device"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_50"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_activation_again"
        style="@style/buttonNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_shape"
        android:text="@string/activation_again"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/bg_green"
        android:textSize="24sp"/>


    <Button
        android:id="@+id/btn_offline"
        style="@style/buttonNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_shape"
        android:text="@string/offline_mode"
        android:textSize="25sp"/>

</LinearLayout>