<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/linearLayout_success"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@color/green">

        <TextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginLeft="@dimen/size_20"
            android:textSize="@dimen/size_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_10">

        <ImageView
            android:layout_width="@dimen/size_40"
            android:layout_height="@dimen/size_40"
            android:src="@drawable/ic_check"
            android:layout_marginLeft="@dimen/size_20" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valid"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_20"
                android:layout_marginLeft="@dimen/size_10"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_name"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_16"/>

    <TextView
        android:id="@+id/family_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_16"/>
    <TextView
        android:id="@+id/qr_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_disease"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/covid"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_vaccine"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_16"/>

    <TextView
        android:id="@+id/date_vaccination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:textSize="@dimen/size_18"/>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"/>

</LinearLayout>


</RelativeLayout>