<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDialogUserInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/SetTemp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="05dp"/>

    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/radio_group_f_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_20">

        <RadioButton
            android:id="@+id/radio_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_30"
            android:textColor="@color/black"
            android:text="@string/fahrenheit"
            android:textSize="@dimen/font_14"
            android:theme="@style/MyCheckBox" />

        <RadioButton
            android:id="@+id/radio_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14"
            android:text="@string/celcius"
            android:theme="@style/MyCheckBox" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_exit"
        style="@style/buttonNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_shape"
        android:text="Save"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

</LinearLayout>